--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "dev-portal",
+  "name": "developer.vuestorefront.io",
   "contributors": [
     {
       "email": "heitor.ramon@gmail.com",
@@ -39,6 +39,7 @@
     "nuxt": "^3.0.0-rc.3",
     "nuxt-windicss": "^2.3.2",
     "ohmyfetch": "^0.4.18",
+    "puppeteer": "^14.1.1",
     "regexparam": "^2.0.0",
     "ufo": "^0.8.4",
     "vue": "^3.2.36",
@@ -46,30 +47,21 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
+    "@types/node": "^17.0.35",
+    "@types/prettier": "^2.6.1",
+    "@types/semver": "^7.3.9",
+    "@vue-storefront/eslint-config-nuxt": "^1.0.1",
     "@vue/test-utils": "^2.0.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.16.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-unicorn": "^42.0.0",
-    "eslint-plugin-vue": "^9.0.1",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.7.2",
     "vite": "^2.9.9",
-    "vitest": "^0.12.9",
-    "vue-eslint-parser": "^9.0.2",
-    "vue-tsc": "^0.34.16"
+    "vitest": "^0.12.9"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
