--- a/package.json
+++ b/package.json
@@ -14,54 +14,51 @@
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
-    "start": "node .output/server/index.mjs",
-    "coverage": "vitest run --coverage",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .eslintignore --fix .",
-    "lint:fix": "eslint src --ext .js,.ts --fix",
+    "lint:fix": "eslint . --ext .js,.ts --fix",
     "posttest": "npm run lint",
     "precommit": "lint-staged",
     "prepublishOnly": "npm run build",
     "release": "npx git-ensure -a && npx bumpp --commit --tag --push",
+    "start": "node .output/server/index.mjs",
+    "story:build": "histoire build",
+    "story:dev": "histoire dev",
+    "story:preview": "histoire preview",
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:e2e": "cypress open",
     "test:unit": "vitest",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@iconify/vue": "^3.2.1",
-    "@nuxt/content": "^2.0.0",
-    "@nuxt/devalue": "^2.0.0",
-    "@nuxtjs/color-mode": "^3.0.3",
+    "@nuxt/content": "^2.0.1",
+    "@nuxtjs/color-mode": "^3.1.3",
     "@nuxtjs/google-fonts": "^1.3.0",
-    "@vueuse/nuxt": "^8.5.0",
-    "@windicss/plugin-question-mark": "^0.1.1",
+    "@vueuse/nuxt": "^8.6.0",
     "lodash": "^4.17.21",
     "nuxt": "^3.0.0-rc.3",
-    "nuxt-windicss": "^2.3.2",
     "ohmyfetch": "^0.4.18",
-    "puppeteer": "^14.1.1",
     "regexparam": "^2.0.0",
-    "ufo": "^0.8.4",
-    "vue": "^3.2.36",
-    "windicss": "^3.5.4"
+    "ufo": "^0.8.4"
   },
   "devDependencies": {
+    "@histoire/plugin-nuxt": "^0.7.3",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.35",
-    "@types/prettier": "^2.6.1",
-    "@types/semver": "^7.3.9",
-    "@vue-storefront/eslint-config-nuxt": "^1.0.1",
+    "@types/node": "^17.0.41",
+    "@types/prettier": "^2.6.3",
+    "@vue-storefront/eslint-config-nuxt": "^1.0.9",
     "@vue/test-utils": "^2.0.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
+    "histoire": "^0.7.3",
     "husky": "^8.0.1",
-    "lint-staged": "^12.4.1",
+    "lint-staged": "^13.0.0",
+    "nuxt-windicss": "^2.4.2",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.4",
-    "unplugin-auto-import": "^0.7.2",
-    "vite": "^2.9.9",
-    "vitest": "^0.12.9"
+    "typescript": "^4.7.3",
+    "vitest": "^0.14.1"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
