--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "strict": true,
-    "types": [
-      "./auto-imports.d.ts",
-      "@nuxt/types",
-      "@nuxt/content"
-    ]
-  }
+  "include": [
+    ".nuxt",
+    "**/*.d.ts"
+  ],
 }
