--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
-    "lint": "eslint --ext .js,.ts,.vue --ignore-path .eslintignore --fix .",
-    "lint:fix": "eslint . --ext .js,.ts --fix",
+    "lint": "eslint . --ext .js,.ts,.vue --ignore-path .eslintignore --fix",
+    "lint:fix": "eslint . --ext .js,.ts,.vue --ignore-path .eslintignore  --fix",
     "posttest": "npm run lint",
     "precommit": "lint-staged",
     "prepublishOnly": "npm run build",
@@ -26,7 +26,6 @@
     "story:preview": "histoire preview",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "cypress open",
     "test:unit": "vitest",
     "typecheck": "vue-tsc --noEmit"
   },
@@ -40,7 +39,8 @@
     "nuxt": "^3.0.0-rc.3",
     "ohmyfetch": "^0.4.18",
     "regexparam": "^2.0.0",
-    "ufo": "^0.8.4"
+    "ufo": "^0.8.4",
+    "windicss": "^3.5.4"
   },
   "devDependencies": {
     "@histoire/plugin-nuxt": "^0.7.3",
