--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "import/default": "off",
     "import/no-named-as-default": "off",
     "import/extensions": "off",
-    "@typescript-eslint/require-await": "off"
+    "@typescript-eslint/require-await": "off",
+    "unicorn/prevent-abbreviations": "off"
   }
 }
