--- a/package.json
+++ b/package.json
@@ -31,34 +31,38 @@
   },
   "dependencies": {
     "@iconify/vue": "^3.2.1",
-    "@nuxt/content": "^2.0.1",
-    "@nuxtjs/color-mode": "^3.1.3",
-    "@nuxtjs/google-fonts": "^1.3.0",
     "@vueuse/nuxt": "^8.6.0",
     "lodash": "^4.17.21",
     "nuxt": "^3.0.0-rc.3",
     "ohmyfetch": "^0.4.18",
     "regexparam": "^2.0.0",
-    "ufo": "^0.8.4",
-    "windicss": "^3.5.4"
+    "ufo": "^0.8.4"
   },
   "devDependencies": {
-    "@histoire/plugin-nuxt": "^0.7.3",
+    "@histoire/plugin-nuxt": "^0.7.6",
+    "@nuxt/content": "^2.0.1",
+    "@nuxtjs/color-mode": "^3.1.4",
+    "@nuxtjs/google-fonts": "^2.0.0",
+    "@nuxtjs/tailwindcss": "^5.1.2",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.41",
+    "@types/node": "^17.0.42",
     "@types/prettier": "^2.6.3",
+    "@types/tailwindcss": "^3.0.10",
     "@vue-storefront/eslint-config-nuxt": "^1.0.9",
     "@vue/test-utils": "^2.0.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.17.0",
-    "histoire": "^0.7.3",
+    "histoire": "^0.7.6",
     "husky": "^8.0.1",
-    "lint-staged": "^13.0.0",
-    "nuxt-windicss": "^2.4.2",
+    "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "tailwindcss": "^3.1.2",
     "typescript": "^4.7.3",
-    "vitest": "^0.14.1"
+    "vitest": "^0.14.2"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
