--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@histoire/plugin-nuxt": "^0.7.7",
+    "@intlify/nuxt3": "^0.2.2",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/google-fonts": "^2.0.0",
