--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "types": [
+      "@nuxt/types",
+      "@nuxtjs/i18n",
+    ]
+  },
   "include": [
     ".nuxt",
     "**/*.d.ts"
