--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "nuxt": "^3.0.0-rc.3",
     "ohmyfetch": "^0.4.18",
     "regexparam": "^2.0.0",
-    "ufo": "^0.8.4"
+    "ufo": "^0.8.4",
+    "vue-github-button": "^3.0.3"
   },
   "devDependencies": {
     "@histoire/plugin-nuxt": "^0.7.8",
@@ -45,6 +46,9 @@
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/tailwindcss": "^5.1.3",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.0",
@@ -57,13 +61,13 @@
     "eslint": "^8.18.0",
     "histoire": "^0.7.8",
     "husky": "^8.0.1",
-    "lint-staged": "^13.0.2",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "sass": "^1.52.3",
-    "sass-loader": "^13.0.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.1",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4",
-    "vitest": "^0.15.2"
+    "vitest": "^0.16.0"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
