feat: added dropdown item

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,9 @@
   "root": true,
   "extends": [
     "@vue-storefront/eslint-config"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-unsafe-assignment": 0,
+    "@typescript-eslint/no-unsafe-member-access": 0
+  }
 }
