--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "@iconify/vue": "^3.2.1",
     "@popperjs/core": "^2.11.5",
     "@vueuse/nuxt": "^8.7.5",
+    "google-fonts-helper": "^3.1.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "nuxt": "^3.0.0-rc.4",
     "ohmyfetch": "^0.4.18",
-    "regexparam": "^2.0.0",
+    "regexparam": "^2.0.1",
     "ufo": "^0.8.4",
     "vue-github-button": "^3.0.3"
   },
@@ -47,31 +48,30 @@
     "@intlify/nuxt3": "^0.2.2",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/color-mode": "^3.1.4",
-    "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.0.1",
     "@types/prettier": "^2.6.3",
-    "@types/tailwindcss": "^3.0.11",
     "@vue-storefront/eslint-config": "^1.0.17",
-    "@vue/test-utils": "^2.0.0",
+    "@vue/test-utils": "^2.0.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
     "histoire": "^0.7.8",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markdownlint-cli": "^0.31.1",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4",
-    "vitest": "^0.16.0"
+    "vitest": "^0.17.0"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
