refactor: fixed error page and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,21 @@
-.DS_Store
-.vite-ssg-dist
-.vite-ssg-temp
-*.local
-dist
-dist-ssr
-node_modules
-.idea/
-*.log
-.env
-.nuxt
-.pnp.*
-.yarn/*
+!.yarn/cache
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-# Nuxt dev/build outputs
-.output
-
-# Local Netlify folder
+*.local
+*.log
+.DS_Store
+.env
+.idea/
 .netlify
+.nuxt
+.output
+.pnp.*
+.vite-ssg-dist
+.vite-ssg-temp
+.yarn/*
+dist
+dist-ssr
+node_modules
