--- a/package.json
+++ b/package.json
@@ -33,20 +33,23 @@
   "dependencies": {
     "@iconify/vue": "^3.2.1",
     "@popperjs/core": "^2.11.5",
-    "@vueuse/nuxt": "^8.7.5",
+    "@vueuse/nuxt": "^8.9.0",
     "google-fonts-helper": "^3.1.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "nuxt": "^3.0.0-rc.4",
     "ohmyfetch": "^0.4.18",
     "regexparam": "^2.0.1",
+    "remark-github": "^11.2.3",
     "shortid": "^2.2.16",
+    "transform-object-keys": "^1.0.7",
     "ufo": "^0.8.4",
+    "unstorage": "^0.5.4",
     "vue-github-button": "^3.0.3",
     "youtube-player": "^5.5.2"
   },
   "devDependencies": {
-    "@histoire/plugin-nuxt": "^0.7.8",
+    "@histoire/plugin-nuxt": "^0.7.9",
     "@intlify/nuxt3": "^0.2.2",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/color-mode": "^3.1.4",
@@ -56,14 +59,14 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.1",
+    "@types/node": "^18.0.3",
     "@types/prettier": "^2.6.3",
     "@vue-storefront/eslint-config": "^1.0.17",
     "@vue/test-utils": "^2.0.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.19.0",
-    "histoire": "^0.7.8",
+    "histoire": "^0.7.9",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markdownlint-cli": "^0.31.1",
@@ -87,5 +90,6 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "packageManager": "yarn@3.2.1"
 }
