--- a/package.json
+++ b/package.json
@@ -33,36 +33,36 @@
   "dependencies": {
     "@iconify/vue": "^3.2.1",
     "@popperjs/core": "^2.11.5",
-    "@vueuse/nuxt": "^8.9.0",
-    "google-fonts-helper": "^3.1.0",
+    "@vueuse/nuxt": "^8.9.1",
+    "clipboard": "^2.0.11",
     "lodash": "^4.17.21",
-    "nanoid": "^4.0.0",
     "nuxt": "^3.0.0-rc.4",
     "ohmyfetch": "^0.4.18",
     "regexparam": "^2.0.1",
-    "remark-github": "^11.2.3",
-    "shortid": "^2.2.16",
     "transform-object-keys": "^1.0.7",
-    "ufo": "^0.8.4",
+    "ufo": "^0.8.5",
     "unstorage": "^0.5.4",
     "vue-github-button": "^3.0.3",
     "youtube-player": "^5.5.2"
   },
   "devDependencies": {
     "@histoire/plugin-nuxt": "^0.7.9",
-    "@intlify/nuxt3": "^0.2.2",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.3",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.3",
     "@types/prettier": "^2.6.3",
     "@vue-storefront/eslint-config": "^1.0.17",
     "@vue/test-utils": "^2.0.2",
+    "@windicss/plugin-animations": "^1.0.9",
+    "@windicss/plugin-interaction-variants": "^1.0.0",
+    "@windicss/plugin-question-mark": "^0.1.1",
+    "@windicss/plugin-scrollbar": "^1.2.3",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.19.0",
@@ -70,13 +70,15 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markdownlint-cli": "^0.31.1",
+    "nuxt-windicss": "^2.4.2",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.11",
+    "prettier-plugin-tailwindcss": "^0.1.12",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
-    "tailwindcss": "^3.1.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.1.5",
     "typescript": "^4.7.4",
-    "vitest": "^0.17.0"
+    "vitest": "^0.17.1"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
