--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   },
   "devDependencies": {
     "@histoire/plugin-nuxt": "^0.7.9",
+    "@intlify/nuxt3": "^0.2.3",
     "@nuxt/content": "^2.0.1",
+    "@nuxtjs/partytown": "^1.2.1",
     "@nuxtjs/tailwindcss": "^5.3.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
@@ -56,15 +58,17 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.4",
     "@types/prettier": "^2.6.3",
+    "@unlighthouse/nuxt": "^0.3.29",
     "@vue-storefront/eslint-config": "^1.0.17",
     "@vue/test-utils": "^2.0.2",
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
+    "commitizen": "^1.0.4",
+    "cz-conventional-changelog": "^3.0.1",
     "eslint": "^8.19.0",
     "histoire": "^0.7.9",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markdownlint-cli": "^0.31.1",
+    "nuxt-schema-org": "^0.6.4",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "sass": "^1.53.0",
