--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "build": "nuxi build",
     "dev": "nuxi dev",
     "lint": "eslint . --ext .js,.ts,.vue --ignore-path .eslintignore --fix",
-    "lint:fix": "eslint . --ext .js,.ts,.vue --ignore-path .eslintignore  --fix",
     "lint:content": "markdownlint ./content && case-police 'content**/*.md'",
     "lint:content:fix": "markdownlint ./content --fix && case-police 'content**/*.md' --fix",
+    "lint:fix": "eslint . --ext .js,.ts,.vue --ignore-path .eslintignore  --fix",
     "posttest": "npm run lint",
     "precommit": "lint-staged",
+    "prepare": "node ./scripts/prepare.js",
     "prepublishOnly": "npm run build",
     "release": "npx git-ensure -a && npx bumpp --commit --tag --push",
     "start": "node .output/server/index.mjs",
@@ -31,10 +32,11 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.6.7",
     "@iconify/vue": "^3.2.1",
     "@nuxtjs/color-mode": "^3.1.4",
     "@popperjs/core": "^2.11.5",
-    "@vueuse/nuxt": "^8.9.3",
+    "@vueuse/nuxt": "^8.9.4",
     "clipboard": "^2.0.11",
     "lodash": "^4.17.21",
     "nuxt": "^3.0.0-rc.4",
@@ -56,19 +58,19 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.4",
+    "@types/node": "^18.0.6",
     "@types/prettier": "^2.6.3",
     "@unlighthouse/nuxt": "^0.3.29",
     "@vue-storefront/eslint-config": "^1.0.17",
     "@vue/test-utils": "^2.0.2",
-    "commitizen": "^1.0.4",
-    "cz-conventional-changelog": "^3.0.1",
-    "eslint": "^8.19.0",
+    "commitizen": "^4.2.5",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.20.0",
     "histoire": "^0.7.9",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "markdownlint-cli": "^0.31.1",
-    "nuxt-schema-org": "^0.6.4",
+    "markdownlint-cli": "^0.32.0",
+    "nuxt-schema-org": "^0.6.5",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "sass": "^1.53.0",
@@ -76,7 +78,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
-    "vitest": "^0.18.0"
+    "vitest": "^0.18.1"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
@@ -84,11 +86,6 @@
   "husky": {
     "hooks": {
       "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
-    }
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
     }
   },
   "packageManager": "yarn@3.2.1"
