--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@headlessui/vue": "^1.6.7",
     "@iconify/vue": "^3.2.1",
     "@nuxtjs/color-mode": "^3.1.4",
+    "@pinia/nuxt": "^0.3.0",
     "@popperjs/core": "^2.11.5",
     "@vueuse/nuxt": "^8.9.4",
     "clipboard": "^2.0.11",
     "lodash": "^4.17.21",
     "nuxt": "^3.0.0-rc.4",
     "ohmyfetch": "^0.4.18",
+    "pinia": "^2.0.16",
     "regexparam": "^2.0.1",
     "transform-object-keys": "^1.0.7",
     "ufo": "^0.8.5",
