--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "private": true,
   "name": "developer.vuestorefront.io",
   "contributors": [
     {
@@ -47,10 +46,12 @@
     "transform-object-keys": "^1.0.7",
     "ufo": "^0.8.5",
     "unstorage": "^0.5.5",
-    "vue-github-button": "^3.0.3"
+    "vue-github-button": "^3.0.3",
+    "vue-i18n": "^9.1.10"
   },
   "devDependencies": {
-    "@histoire/plugin-nuxt": "^0.7.9",
+    "@histoire/plugin-nuxt": "^0.8.1",
+    "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/nuxt3": "^0.2.3",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/partytown": "^1.2.1",
@@ -68,10 +69,9 @@
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.20.0",
-    "histoire": "^0.7.9",
+    "histoire": "^0.8.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "markdownlint-cli": "^0.32.0",
     "nuxt-schema-org": "^0.6.5",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
@@ -89,6 +89,5 @@
     "hooks": {
       "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
     }
-  },
-  "packageManager": "yarn@3.2.1"
+  }
 }
