--- a/.github/workflows/conventional-pr-name.yml
+++ b/.github/workflows/conventional-pr-name.yml
@@ -13,13 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16"
-
       - name: Install Dependencies
-        run: yarn
-
-      - uses: JulienKode/pull-request-name-linter-action@v0.2.0
+        run: npm install @commitlint/config-conventional
+      - uses: JulienKode/pull-request-name-linter-action@v0.5.0
