--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
   "dependencies": {
     "@headlessui/vue": "^1.6.7",
     "@iconify/vue": "^3.2.1",
+    "@nuxtjs/algolia": "^1.1.0",
     "@nuxtjs/color-mode": "^3.1.4",
-    "@pinia/nuxt": "^0.3.0",
+    "@pinia/nuxt": "^0.3.1",
     "@popperjs/core": "^2.11.5",
     "@vueuse/nuxt": "^8.9.4",
     "clipboard": "^2.0.11",
     "lodash": "^4.17.21",
     "nuxt": "^3.0.0-rc.4",
     "ohmyfetch": "^0.4.18",
-    "pinia": "^2.0.16",
+    "pinia": "^2.0.17",
     "regexparam": "^2.0.1",
     "transform-object-keys": "^1.0.7",
     "ts-debounce": "^4.0.0",
@@ -51,18 +52,18 @@
     "vue-i18n": "^9.1.10"
   },
   "devDependencies": {
-    "@histoire/plugin-nuxt": "^0.8.3",
+    "@histoire/plugin-nuxt": "^0.8.4",
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/nuxt3": "^0.2.3",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/partytown": "^1.2.1",
-    "@nuxtjs/tailwindcss": "^5.3.0",
+    "@nuxtjs/tailwindcss": "^5.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.6",
+    "@types/node": "^18.6.1",
     "@types/prettier": "^2.6.3",
     "@unlighthouse/nuxt": "^0.3.29",
     "@vue-storefront/eslint-config": "^1.0.17",
@@ -70,18 +71,18 @@
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.20.0",
-    "histoire": "^0.8.3",
+    "histoire": "^0.8.4",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "nuxt-schema-org": "^0.6.5",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.12",
-    "sass": "^1.53.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
-    "vitest": "^0.18.1"
+    "vitest": "^0.19.1"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
