chore: updated project base files

--- a/.gitignore
+++ b/.gitignore
@@ -9,15 +9,16 @@
 .DS_Store
 .env
 .idea/
-.netlify
-.nuxt
-.output
+.netlify/
+.nuxt/
+.output/
 .pnp.*
-.vite-ssg-dist
-.vite-ssg-temp
+.vite-ssg-dist/
+.vite-ssg-temp/
 .yarn/*
-.vercel
-.unlighthouse
-dist
-dist-ssr
-node_modules
+.vercel/
+.unlighthouse/
+dist/
+dist-ssr/
+node_modules/
+.vscode/
