--- a/.github/workflows/deploy-vue-storefront-cloud.yaml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yaml
@@ -25,7 +25,7 @@ jobs:
   deploy_production:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: build_production
+    needs: build
     steps:
       - uses: chrnorm/deployment-action@releases/v1
         name: Create GitHub deployment
