CI/CD configuration

--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -1,5 +1,15 @@
 FROM node:lts as builder
 
+ARG ALGOLIA_TOKEN
+ARG ALGOLIA_ID
+ARG GITHUB_TOKEN
+ARG DEV_TO_TOKEN
+
+ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
+ENV ALGOLIA_ID=$ALGOLIA_ID
+ENV GITHUB_TOKEN=$GITHUB_TOKEN
+ENV DEV_TO_TOKEN=$DEV_TO_TOKEN
+
 WORKDIR /app
 
 COPY . .
