--- a/.github/workflows/deploy-vue-storefront-cloud.yaml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yaml
@@ -70,3 +70,89 @@ jobs:
           description: Unfortunately, the instance hasn't been updated.
           state: failure
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+
+  deploy_beta:
+    if: github.ref == 'refs/heads/beta'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: chrnorm/deployment-action@releases/v1
+        name: Create GitHub deployment
+        id: deployment
+        with:
+          token: ${{ github.token }}
+          target_url: https://developer-beta.europe-west1.gcp.storefrontcloud.io
+          environment: production
+          initial_status: in_progress
+      - name: Deploy on developer-beta.europe-west1.gcp.storefrontcloud.io
+        run: |
+          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{
+              "front_version":"${{ github.sha }}"
+            }' https://farmer.storefrontcloud.io/instance/developer-beta-europe-west1-gcp-storefrontcloud-io)
+          if echo $OUTPUT | grep -q '"code":200,'; then
+            echo "Instance updated"
+          else
+            echo "Something went wrong during the update process... Response: $OUTPUT"
+            exit 1
+          fi
+      - name: Update deployment status (success)
+        if: success()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: ${{ github.token }}
+          target_url: https://developer-beta.europe-west1.gcp.storefrontcloud.io
+          state: success
+          description: Congratulations! The deploy is done.
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+      - name: Update deployment status (failure)
+        if: failure()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: ${{ github.token }}
+          target_url: https://developer-beta.europe-west1.gcp.storefrontcloud.io
+          description: Unfortunately, the instance hasn't been updated.
+          state: failure
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+
+  deploy_test:
+    if: github.ref == 'refs/heads/test'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: chrnorm/deployment-action@releases/v1
+        name: Create GitHub deployment
+        id: deployment
+        with:
+          token: ${{ github.token }}
+          target_url: https://developer-test.europe-west1.gcp.storefrontcloud.io
+          environment: production
+          initial_status: in_progress
+      - name: Deploy on developer-test.europe-west1.gcp.storefrontcloud.io
+        run: |
+          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{
+              "front_version":"${{ github.sha }}"
+            }' https://farmer.storefrontcloud.io/instance/developer-test-europe-west1-gcp-storefrontcloud-io)
+          if echo $OUTPUT | grep -q '"code":200,'; then
+            echo "Instance updated"
+          else
+            echo "Something went wrong during the update process... Response: $OUTPUT"
+            exit 1
+          fi
+      - name: Update deployment status (success)
+        if: success()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: ${{ github.token }}
+          target_url: https://developer-test.europe-west1.gcp.storefrontcloud.io
+          state: success
+          description: Congratulations! The deploy is done.
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+      - name: Update deployment status (failure)
+        if: failure()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: ${{ github.token }}
+          target_url: https://developer-test.europe-west1.gcp.storefrontcloud.io
+          description: Unfortunately, the instance hasn't been updated.
+          state: failure
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
