--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "story:dev": "histoire dev",
     "story:preview": "histoire preview",
     "test": "vitest",
+    "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:unit": "vitest"
   },
@@ -52,6 +53,7 @@
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/nuxt3": "^0.2.3",
     "@nuxt/content": "^2.0.1",
+    "@nuxt/test-utils": "^3.0.0-rc.6",
     "@nuxtjs/partytown": "^1.2.1",
     "@nuxtjs/tailwindcss": "^5.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
@@ -59,11 +61,13 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.6.1",
+    "@types/node": "^18.6.2",
     "@types/prettier": "^2.6.4",
     "@unlighthouse/nuxt": "^0.3.29",
+    "@vitest/ui": "^0.19.1",
     "@vue-storefront/eslint-config": "^1.0.17",
     "@vue/test-utils": "^2.0.2",
+    "c8": "^7.12.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.20.0",
