--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -4,11 +4,13 @@ ARG ALGOLIA_TOKEN
 ARG ALGOLIA_ID
 ARG GITHUB_TOKEN
 ARG DEV_TO_TOKEN
+ARG GOOGLE_TAG_ID
 
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
 ENV GITHUB_TOKEN=$GITHUB_TOKEN
 ENV DEV_TO_TOKEN=$DEV_TO_TOKEN
+ENV GOOGLE_TAG_ID=$GOOGLE_TAG_ID
 ENV CI=true
 
 WORKDIR /app
@@ -28,11 +30,13 @@ ARG ALGOLIA_TOKEN
 ARG ALGOLIA_ID
 ARG GITHUB_TOKEN
 ARG DEV_TO_TOKEN
+ARG GOOGLE_TAG_ID
 
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
 ENV GITHUB_TOKEN=$GITHUB_TOKEN
 ENV DEV_TO_TOKEN=$DEV_TO_TOKEN
+ENV GOOGLE_TAG_ID=$GOOGLE_TAG_ID
 ENV NODE_ENV=production
 
 WORKDIR /app
