--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
     "@tailwindcss/typography": "^0.5.4",
     "@types/prettier": "^2.6.4",
     "@unlighthouse/nuxt": "^0.3.29",
-    "@vitest/ui": "^0.20.2",
+    "@vitest/ui": "^0.20.3",
     "@vue-storefront/eslint-config": "^1.0.17",
+    "@vue-storefront/nuxt-gtag": "^1.0.1",
     "@vue/test-utils": "^2.0.2",
     "c8": "^7.12.0",
     "commitizen": "^4.2.5",
@@ -81,7 +82,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.1.7",
     "typescript": "^4.7.4",
-    "vitest": "^0.20.2"
+    "vitest": "^0.20.3"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
