--- a/.github/workflows/3.codeql-analysis.yml
+++ b/.github/workflows/3.codeql-analysis.yml
@@ -20,6 +20,10 @@ on:
   schedule:
     - cron: '21 10 * * 2'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   analyze:
     name: Analyze
