refactor: updated deploy script

--- a/.github/workflows/5.deploy.yaml
+++ b/.github/workflows/5.deploy.yaml
@@ -85,8 +85,13 @@ jobs:
       - name: "Deploy ${{env.ENVIRONMENT}}"
         shell: bash
         run: |
-          chmod +x ./scripts/deploy.sh
-          ./scripts/deploy.sh
+          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' "$DEPLOY_URL")
+          if echo $OUTPUT | grep -q '"code":200,'; then
+            echo "Instance updated"
+          else
+            echo "Something went wrong during the update process... Response: $OUTPUT"
+            exit 1
+          fi
 
       # If deployment was successful
       - name: Success Status
