refactor: updated deploy envs

--- a/.github/workflows/5.deploy.yaml
+++ b/.github/workflows/5.deploy.yaml
@@ -85,7 +85,7 @@ jobs:
       - name: "Deploy ${{env.ENVIRONMENT}}"
         shell: bash
         run: |
-          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' "$DEPLOY_URL")
+          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' ${{ secrets.DEPLOY_URL }})
           if echo $OUTPUT | grep -q '"code":200,'; then
             echo "Instance updated"
           else
