--- a/.github/workflows/5.deploy.yaml
+++ b/.github/workflows/5.deploy.yaml
@@ -1,6 +1,7 @@
 name: Deploy to Vue Storefront Cloud
 
-on: [ push ]
+on:
+  deployment
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -51,23 +52,18 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      deployments: write
+    env:
+      SHA: ${{ github.event.deployment.sha }}
+      ENVIRONMENT: ${{ github.event.deployment.environment }}
+      DEPLOY_ID: ${{ github.event.deployment.id }}
+      DEPLOY_URL: ${{ secrets.DEPLOY_URL}}
 
     steps:
-      # Start deployment status
-      - name: Create GitHub deployment
-        uses: bloodf/github-deploy-action@v1
-        id: deployment
-        with:
-          environment-url: ${{env.DEPLOY_URL}}
-          environment: ${{env.ENVIRONMENT}}
-
       - name: In-progress Status
         uses: bloodf/github-deploy-status@v1
         with:
-          environment-url: ${{ steps.deployment.outputs.environment_url }}
-          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
+          environment-url: ${{env.DEPLOY_URL }}
+          deployment-id: ${{env.DEPLOY_ID }}
           state: 'in_progress'
 
       - name: "Slack Notification - Starting"
@@ -85,8 +81,8 @@ jobs:
       - name: "Deploy ${{env.ENVIRONMENT}}"
         shell: bash
         run: |
-          echo 'Deploying to: ${{ secrets.DEPLOY_URL }}'
-          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' '${{ secrets.DEPLOY_URL }}')
+          echo 'Deploying to: $DEPLOY_URL'
+          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' $DEPLOY_URL)
           if echo $OUTPUT | grep -q '"code":200,'; then
             echo "Instance updated"
           else
@@ -99,8 +95,8 @@ jobs:
         if: success()
         uses: bloodf/github-deploy-status@v1
         with:
-          environment-url: ${{ steps.deployment.outputs.environment_url }}
-          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
+          environment-url: ${{env.DEPLOY_URL }}
+          deployment-id: ${{env.DEPLOY_ID }}
           state: 'success'
           description: 'Successful deployment to ${{env.ENVIRONMENT}}'
 
@@ -122,8 +118,8 @@ jobs:
         if: failure()
         uses: bloodf/github-deploy-status@v1
         with:
-          environment-url: ${{ steps.deployment.outputs.environment_url }}
-          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
+          environment-url: ${{env.DEPLOY_URL }}
+          deployment-id: ${{env.DEPLOY_ID }}
           state: 'error'
           description: 'There was an error when deploying to the environment: ${{env.ENVIRONMENT}}'
 
