refactor: renamed stages

--- a/.github/deploybot.yaml
+++ b/.github/deploybot.yaml
@@ -1,7 +1,7 @@
 deployments:
-  - name: Development
+  - name: development
 
-  - name: Staging
+  - name: staging
     on_push: true
 
-  - name: Production
+  - name: production
