--- a/.github/workflows/5.deploy.yaml
+++ b/.github/workflows/5.deploy.yaml
@@ -1,11 +1,17 @@
 name: Deploy to Vue Storefront Cloud
 
 on:
-  push:
-    branches:
-      - main
-      - staging
-      - development
+  workflow_dispatch:
+    inputs:
+      envName:
+        description: 'Environment name'
+        required: true
+        default: 'development'
+        type: choice
+        options:
+          - development
+          - staging
+          - production
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -56,11 +62,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    env:
-      SHA: ${{ github.event.deployment.sha }}
-      ENVIRONMENT: ${{ github.event.deployment.environment }}
-      DEPLOY_ID: ${{ github.event.deployment.id }}
-      DEPLOY_URL: ${{ secrets.DEPLOY_URL}}
 
     steps:
       # Start deployment status
@@ -68,8 +69,8 @@ jobs:
         uses: bloodf/github-deploy-action@v1
         id: deployment
         with:
-          environment-url: ${{env.DEPLOY_URL}}
-          environment: ${{env.ENVIRONMENT}}
+          environment-url: ${{ secrets.DEPLOY_URL }}
+          environment: ${{ inputs.envName }}
 
       - name: In-progress Status
         uses: bloodf/github-deploy-status@v1
@@ -91,11 +92,11 @@ jobs:
           MSG_MINIMAL: true
 
       # Deploying image to VSF Cloud
-      - name: "Deploy ${{env.ENVIRONMENT}}"
+      - name: Deploy to VSF Cloud
         shell: bash
         run: |
-          echo 'Deploying to: $DEPLOY_URL'
-          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' $DEPLOY_URL)
+          echo "Deploying to: '${{ steps.deployment.outputs.environment_url }}'"
+          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' '${{ steps.deployment.outputs.environment_url }}')
           if echo $OUTPUT | grep -q '"code":200,'; then
             echo "Instance updated"
           else
